Bug 118047 - FILEOPEN RTF: In page header "spacing below paragraph" is 0.35 cm, should be 0
Summary: FILEOPEN RTF: In page header "spacing below paragraph" is 0.35 cm, should be 0
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: bibisected, filter:rtf, regression
: 125474 (view as bug list)
Depends on:
Blocks: RTF-Header-Footer
  Show dependency treegraph
 
Reported: 2018-06-07 07:15 UTC by Ari Latvala
Modified: 2024-01-15 19:27 UTC (History)
12 users (show)

See Also:
Crash report or crash signature:


Attachments
RTF version of "Pentutarkistus_elltarkistus_17" document (150.13 KB, application/msword)
2018-06-07 07:15 UTC, Ari Latvala
Details
DOC version of Pentutarkistus_elltarkistus_17 document (47.00 KB, application/msword)
2018-06-07 07:16 UTC, Ari Latvala
Details
The example file in Word and Writer master (173.83 KB, image/png)
2022-01-27 11:19 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ari Latvala 2018-06-07 07:15:51 UTC
Created attachment 142579 [details]
RTF version of "Pentutarkistus_elltarkistus_17" document

+++ This bug was initially created as a clone of Bug #96276 +++

LibreOffice 6.0.4.2 running on Windows 10 64-bit. Layout incorrect for RTF version of document "Pentutarkistus / Eläinlääkärintodistus" available at https://www.kissaliitto.fi/lomakkeet/rekisterointi

Attached RTF and DOC versions of the same document for comparison. On RTF version header table's paragraph setting "Spacing below paragraph" is 0.35 cm when it should be 0 cm. DOC -version of the document does not have this problem.

This problem is separate from the bug described on original Bug #96276 about incorrect paragrah spacing set to 1.15 on whole document instead of Single.
Comment 1 Ari Latvala 2018-06-07 07:16:51 UTC
Created attachment 142580 [details]
DOC version of Pentutarkistus_elltarkistus_17 document

DOC version shows the expected layout.
Comment 2 Dieter 2018-06-07 07:23:52 UTC
I can't see a difference between rtf and doc with

Version: 6.0.4.2 (x64)
Build-ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group

Paragraph spacing in table is always 0 cm
Comment 3 Xisco Faulí 2018-06-07 08:51:43 UTC
It's 0 cm in

Version: 6.0.4.2
Build ID: 1:6.0.4~rc2-0ubuntu0.16.04.1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 4 Ari Latvala 2018-06-08 10:28:05 UTC
Tested with LO 6.0.4 at 64-bit Windows 10. Problem only at the header causing middle cell between logos be too high and messing  page layout.
Comment 5 Dieter 2018-06-08 10:46:52 UTC
I confirm it with

Version: 6.0.4.2 (x64)
Build-ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 6 Buovjaga 2018-06-08 11:49:42 UTC
Bibisected with Win 44 repo to range 73e4a5d091de89064c931128da46a910cc139bc3...8a4dc64c04c9b0d6dbd1ce1699f793beeecfe95f
There are two RTF import commits
https://cgit.freedesktop.org/libreoffice/core/commit/?id=1be0a3fa9ebb22b607c54b47739d4467acfed259
n#825305: writerfilter RTF import: override style properties like Word

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6c0e1270889deb513f961f864dfc1c02ee8705f4
fdo#70578: writerfilter RTF import: by default style is para style 0

Adding Cc: to Michael Stahl
Comment 7 Xisco Faulí 2018-07-17 19:39:37 UTC
Checking the list of Most CC bugs ( https://wiki.documentfoundation.org/QA/Stats/MostCCBugs ) I found this one...

@Miklos, I thought you could be interested...
Comment 8 Ari Latvala 2019-02-12 06:56:04 UTC
Problem still valid on LO 6.2.0.3 for 64-bit Linux version
Comment 9 Dieter 2021-01-24 12:26:23 UTC
Still present in

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

@ Miklos and Michael: Any ideas?
Comment 10 Gabor Kelemen (Collabora) 2022-01-27 11:19:12 UTC
Created attachment 177828 [details]
The example file in Word and Writer master

Still a problem in

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eb69767d7c1bb8e6e780fd9503f08c9d7f5ecb45
CPU threads: 13; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 11 Commit Notification 2022-03-21 15:00:10 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79b5ff92b17fde902c2f9db3e806f1c77a387dff

tdf#118047: RTF import: better deduplication for header/footer

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-03-22 08:55:53 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/462e1c7911d917a5edf2c963ad8b47115a607f52

tdf#118047: RTF import: better deduplication for header/footer

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Dieter 2022-03-26 07:13:09 UTC
VERIFIED with

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e8c95b796626cb9db163f5d563fa67f38a5e92b0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Vasily, thanks for fixing it!
Comment 14 Gabor Kelemen (Collabora) 2024-01-15 19:27:24 UTC
*** Bug 125474 has been marked as a duplicate of this bug. ***