tdf#118047: RTF import: better deduplication for header/footer

Here are two related fixes in one patch:

1. By default current style index is 0, not -1. Due to this we
can assume usage of default "Normal" style during deduplication.
Seems there is no difference in case of no style mentioning in
run or mentioning "Normal" one (\s0), so value -1 looks
unnesesary.

2. During header/footer "substreams" processing StyleTableEntires
was not reused in new domain mapper impl instance. So deduplication
did not work well.

2a. To avoid copying of whole StyleTableEntries between instances
it is stored as pointer in domain mapper impl.

Change-Id: Id003d35554e9b43186238920d9a6373452095121
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131899
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 79b5ff92b17fde902c2f9db3e806f1c77a387dff)